--- a/src/styles/BatsmanSection.css
+++ b/src/styles/BatsmanSection.css
@@ -38,3 +38,7 @@
       justify-content: center;
       text-align: center;
 }
+
+.wicket-header {
+      
+}
